Se corrigio registrar usuario y subir imagen de perfil. Se agrego en cabecera de listar usuarios condicion para mostrar el titulo correctamente (plurarles)

--- a/ProyectoTISJ-war/web/Administrador/AdministradorMenu.xhtml
+++ b/ProyectoTISJ-war/web/Administrador/AdministradorMenu.xhtml
@@ -53,7 +53,7 @@
                 <div class="navOptMenu">
                     Asignaturas                    
                 </div>
-                <div id="listar" class="navOptMenu" style="display: none; font-size: 10pt;">
+                <div id="listar" class="navOptMenu" style="display: none; font-size: 10pt; height: 10px;">
                     <a href="../Asignatura/ListarAsignaturas.xhtml">
                         Listar Asignaturas
                     </a><br/>
