Se agrego inner class a ListarCursoBean para mostrar la informacion de cada curso.

--- a/ProyectoTISJ-war/web/Curso/ListarCursos.xhtml
+++ b/ProyectoTISJ-war/web/Curso/ListarCursos.xhtml
@@ -24,10 +24,10 @@
                     <div class="ListItem" >
 
                         <div class="item">
-                            Hay un curso
+                            #{curso.nombreAsignatura}
                         </div>
                         <div class="item">
-                            
+                            #{curso.nombreDocente}
                         </div>
 
 
