Se agregaron nuevas funciones para el caso de uso de listarCursos para todos los roles. Se agrego condicion en listarAsignaturas.xhtml para mensaje en caso de no haber asignaturas registradas.

--- a/ProyectoTISJ-war/web/Asignatura/ListarAsignaturas.xhtml
+++ b/ProyectoTISJ-war/web/Asignatura/ListarAsignaturas.xhtml
@@ -12,6 +12,11 @@
             </div>
         </div>
         <div id="contenedor" style="margin-top: 120px">
+            <h:panelGroup rendered="#{empty listarAsignaturasBean.asignaturas}">
+            <div class="ListItem" >
+                No hay Asignaturas registradas.
+            </div>
+            </h:panelGroup>
             <c:forEach var="asignatura" items="#{listarAsignaturasBean.asignaturas}">
                 <div class="ListItemContainer" >
                     <div class="ListItem" >
