--- a/ProyectoTISJ-war/web/Docente/DocenteMenu.xhtml
+++ b/ProyectoTISJ-war/web/Docente/DocenteMenu.xhtml
@@ -7,15 +7,17 @@
         <div class="navHeader">
             <div class="navBadge">
                 <a href="../Usuario/EditarPerfil.xhtml" >
-                    <h:graphicImage url="#{usuarioBean.imagenUsuario}" width="100%" height="100%" style="max-width:500px"/>
+                    <h:graphicImage url="#{usuarioLogueadoBean.imagenUsuario}" width="100%" height="100%" style="max-width:500px"/>
                 </a>
             </div>
             <div class="navLabel">
-                <h:outputText value="#{usuarioBean.nombreUsuario}"/>
+                <h:outputText value="#{usuarioLogueadoBean.nombreUsuario}"/>
             </div>
+            <a href="../loginRol.xhtml">
             <div class="navLabel">
                 (Docente)
             </div>
+            </a>
         </div>
         
         <div class="navDivider"></div>
