--- a/ProyectoTISJ-war/web/Usuario/ListarUsuarios.xhtml
+++ b/ProyectoTISJ-war/web/Usuario/ListarUsuarios.xhtml
@@ -8,14 +8,19 @@
         <div class="cabecera" >
             <div class="titulo" >
                 <h:panelGroup rendered="#{listarUsuariosBean.rol == 'Administrador'}">
-                Listado de #{listarUsuariosBean.rol}es Registrados
+                    Listado de #{listarUsuariosBean.rol}es Registrados
                 </h:panelGroup>
                 <h:panelGroup rendered="#{listarUsuariosBean.rol != 'Administrador'}">
-                Listado de #{listarUsuariosBean.rol}s Registrados
+                    Listado de #{listarUsuariosBean.rol}s Registrados
                 </h:panelGroup>
             </div>
         </div>
         <div id="contenedor">
+            <h:panelGroup rendered="#{empty listarUsuariosBean.usuarios}">
+                <div class="ListItemContainer" >
+                        No hay #{listarUsuariosBean.rol}s registrados.
+                </div>            
+            </h:panelGroup>
             <c:forEach var="usuario" items="#{listarUsuariosBean.usuarios}">
                 <div class="ListItemContainer" >
                     <div class="ListItem" >
@@ -39,7 +44,7 @@
                             <h:form>
                                 <h:commandLink action="#{regCursoWizard.seleccionarDocente(usuario.idUsuario)}" value="...">
                                     <f:param name="cid" value="#{regCursoWizard.conversation.id}" />
-                            </h:commandLink>
+                                </h:commandLink>
                                 <f:viewParam name="rol" value="#{listarUsuariosBean.rol}"/>
                             </h:form>
                         </h:panelGroup>
