--- a/ProyectoTISJ-war/web/loginRol.xhtml
+++ b/ProyectoTISJ-war/web/loginRol.xhtml
@@ -66,16 +66,47 @@
             <div id="linea">
                 <div id="titulo">
                     <img src="./Resources/Images/lock.png"/><br/>
-                    Ya estas Logueado.
+                    Ya estas Logueado. Puedes seleccionar un nuevo Rol.
                 </div>
-                <div id="contenedor">
-                    <div id="contendorBotones" style="margin-top: 15px;">
-                        <h:commandLink action="#{login.logout()}">
-                            <div class="menuOpcion" name="logout" style="text-align: center">
-                                <div class="textoMenuOpcion" style="margin-top: 65px;">Salir</div>
-                            </div>
-                        </h:commandLink>
-                    </div>                    
+                <div id="contenedor">                     
+                    <div id="contenedorBotones">
+                        <h:panelGroup rendered="#{ func:contains(login.rolesUsuario, 'Estudiante') and login.rolSeleccionado !='Estudiante'}">
+                            <h:commandLink action="#{login.cambiarRol('Estudiante')}">
+                                <div class="menuOpcion" name="Estudiante" style="text-align: center" >
+                                    <div class="textoMenuOpcion">Estudiante</div>
+                                    <img src="./Resources/Images/estudiante.png" width="100" height="100" alt="edit"/>
+                                    <div class="imagenMenuOpcion"></div>
+                                </div>
+                            </h:commandLink>
+                        </h:panelGroup>
+                        <h:panelGroup rendered="#{ func:contains(login.rolesUsuario, 'Docente') and login.rolSeleccionado != 'Docente'}">
+                            <h:commandLink action="#{login.cambiarRol('Docente')}">
+                                <div class="menuOpcion" name="Docente" style="text-align: center">
+                                    <div class="textoMenuOpcion">Docente</div>
+                                    <img src="./Resources/Images/docente.png" width="100" height="100" alt="edit"/>
+                                    <div class="imagenMenuOpcion"></div>
+                                </div>
+                            </h:commandLink>
+                        </h:panelGroup>
+                        <h:panelGroup rendered="#{ func:contains(login.rolesUsuario, 'Administrativo') and login.rolSeleccionado!='Administrativo'}">
+                            <h:commandLink action="#{login.cambiarRol('Administrativo')}">
+                                <div class="menuOpcion" name="Administrativo" style="text-align: center">
+                                    <div class="textoMenuOpcion">Administrativo</div>
+                                    <img src="./Resources/Images/administrativo.png" width="100" height="100" alt="edit"/>
+                                    <div class="imagenMenuOpcion"></div>
+                                </div>
+                            </h:commandLink>
+                        </h:panelGroup>
+                        <h:panelGroup rendered="#{ func:contains(login.rolesUsuario, 'Administrador') and login.rolSeleccionado != 'Administrador'}">
+                            <h:commandLink action="#{login.cambiarRol('Administrador')}">
+                                <div class="menuOpcion" name="Administrador" style="text-align: center">
+                                    <div class="textoMenuOpcion">Administrador</div>
+                                    <img src="./Resources/Images/administrador.png" width="100" height="100" alt="edit"/>
+                                    <div class="imagenMenuOpcion"></div>
+                                </div>
+                            </h:commandLink>
+                        </h:panelGroup>
+                    </div>
                 </div>
             </div>            
         </h:form>
