Condicion para boton de registrar curso en listado de asignaturas. Link a cambiar rol en menu administrador.

--- a/ProyectoTISJ-war/web/Asignatura/ListarAsignaturas.xhtml
+++ b/ProyectoTISJ-war/web/Asignatura/ListarAsignaturas.xhtml
@@ -23,13 +23,14 @@
                             #{asignatura.creditosAsignatura} creditos.
                         </div>
                         
-                        <div class="optionItem" style="background-image: url(../Resources/Images/deleteShadow.png)"></div>
-                        <div class="optionItem" style="background-image: url(../Resources/Images/editShadow.png)"></div>
-                        <h:panelGroup rendered="#{login.rolSeleccionado == 'Administrador' or login.rolSeleccionado == 'Administrativo'}">
+<!--                        <div class="optionItem" style="background-image: url(../Resources/Images/deleteShadow.png)"></div>
+                        <div class="optionItem" style="background-image: url(../Resources/Images/editShadow.png)"></div>-->
+                        <h:panelGroup rendered="#{(login.rolSeleccionado == 'Administrador' or login.rolSeleccionado == 'Administrativo') and listarAsignaturasBean.opt =='regcurso' }">
                             <h:form>                                
                                 <h:commandLink  action="#{regCursoWizard.seleccionarAsignatura(asignatura.idAsignatura)}" value="..." >
                                     <f:param name="cid" value="#{regCursoWizard.conversation.id}" />
                                 </h:commandLink>
+<!--                                <f:viewParam name="opt" value="#{listarAsignaturasBean.opt}"/>-->
                             </h:form>
                         </h:panelGroup>
                     </div>
