--- a/ProyectoTISJ-war/web/Usuario/ListarUsuarios.xhtml
+++ b/ProyectoTISJ-war/web/Usuario/ListarUsuarios.xhtml
@@ -21,6 +21,11 @@
                     No hay #{listarUsuariosBean.rol}s registrados.
                 </div>            
             </h:panelGroup>
+            <h:panelGroup  rendered="#{(login.rolSeleccionado == 'Administrador' or login.rolSeleccionado == 'Administrativo') and listarUsuariosBean.opt == 'regcurso' }">
+                <span class="info" style="text-align: center;">
+                    Seleccionar Docente
+                </span> 
+            </h:panelGroup>
             <c:forEach var="usuario" items="#{listarUsuariosBean.usuarios}">
                 <div class="ListItemContainer" >
                     <div class="ListItem" >
