--- a/ProyectoTISJ-war/web/Asignatura/ListarAsignaturas.xhtml
+++ b/ProyectoTISJ-war/web/Asignatura/ListarAsignaturas.xhtml
@@ -32,7 +32,7 @@
                     <!--                        <div class="optionItem" style="background-image: url(../Resources/Images/deleteShadow.png)"></div>
                                             <div class="optionItem" style="background-image: url(../Resources/Images/editShadow.png)"></div>-->
                     <h:panelGroup rendered="#{(login.rolSeleccionado == 'Administrador' or login.rolSeleccionado == 'Administrativo') and listarAsignaturasBean.opt =='regcurso' }">
-                        <div class="registrarCurso">Seleccionar Curso 
+                        <div class="registrarCurso">Seleccionar Asignatura 
                             <h:form>                                
                                 <h:commandLink  action="#{regCursoWizard.seleccionarAsignatura(asignatura.idAsignatura)}" >
                                     <f:param name="cid" value="#{regCursoWizard.conversation.id}" />
