--- a/ProyectoTISJ-war/web/Usuario/ListarUsuarios.xhtml
+++ b/ProyectoTISJ-war/web/Usuario/ListarUsuarios.xhtml
@@ -71,7 +71,7 @@
                         <div class="negrita">Estado Civil: </div> #{usuario.estadoCivilUsuario} <br/>
                         <div class="negrita">Sexo: </div> #{usuario.sexoUsuario} <br/>
                         <h:panelGroup rendered="#{listarUsuariosBean.rol == 'Estudiante'}">
-                            <div class="negrita">Estudios Cursados: </div>
+                            <div class="negrita">Estudios Cursados: </div><h:outputText value="#{listarUsuariosBean.listarAsignaturasDocente(usuario.idUsuario)}" /><br/>
                         </h:panelGroup>
                         <h:panelGroup rendered="#{listarUsuariosBean.rol == 'Docente'}">
                             <div class="negrita">Cursos Dictados: </div> <h:outputText value="#{listarUsuariosBean.listarAsignaturasDocente(usuario.idUsuario)}" /><br/>
@@ -80,7 +80,7 @@
                     </div>
                 </div>            
             </c:forEach>
-            <h:panelGroup rendered="#{registrarUsuarioBean.rol == 'Administrador'}">
+<!--            <h:panelGroup rendered="#{registrarUsuarioBean.rol == 'Administrador'}">
                 <div class="ListItemContainer BotonAdd">
                     <a href="../Usuario/RegistrarUsuario.xhtml?rol=Administrador">
                         <div class="ImagenItem ImagenAdd">
@@ -115,7 +115,7 @@
                         </div>
                     </a>
                 </div>
-            </h:panelGroup>
+            </h:panelGroup>-->
         </div>
     </ui:define>
 </ui:composition>
