--- a/ProyectoTISJ-war/web/Usuario/RegistrarUsuario.xhtml
+++ b/ProyectoTISJ-war/web/Usuario/RegistrarUsuario.xhtml
@@ -119,13 +119,19 @@
                                         <h:inputText class="Texto" value="#{estudio.orientacionEstudio}"/>
                                     </h:column>
                                 </h:dataTable>
-                            </div><h:message class="error" for="inputEstudio"/>    
+                            </div>
                         </div>
                         <div class="menuOpcion Mitad" style="float: right" >
                             <div class="nombreDocente">Formulario de Inscripcion</div>
-                            <img src="./RegistrarUsuario_files/imagen.png" width="100" height="100" style="margin-top: 50px;" id="formulario"/>
-                            <h:inputFile value="#{registrarUsuarioBean.partImagenFormInscripcion}" />
-                            <div class="botonImagen"><h:inputFile class="boton subirImagen formulario" value="#{registrarUsuarioBean.partImagenFormInscripcion}" p:accept="image/*"/></div>
+                            <img src="./RegistrarUsuario_files/imagen.png" width="100" height="100" style="margin-top: 50px;" id="formulario"/>                           
+                            <div class="botonImagen">
+                                <h:inputFile id="inputFormIngreso" class="boton subirImagen formulario" value="#{registrarUsuarioBean.partImagenFormInscripcion}" p:accept="image/*"/>
+                                    <h:commandButton value="cargar">
+                                        <f:ajax event="click" execute="inputFormIngreso" />
+                                    </h:commandButton>
+                            <h:message class="error" for="inputFormIngreso"/>
+                            </div>
+                            
                             <div class="inputContainer">
                                 <img class="imagenMenuOpcion" src="../Resources/Images/FechaNacimiento.png"/>
                                 <h:inputText id="inputGeneracion" value="#{registrarUsuarioBean.generacionAnioEstudiante}" required="true" requiredMessage="Debes ingresar la generacion" class="Texto" p:placeholder="Año de Ingreso"/>              
