--- a/ProyectoTISJ-war/web/Curso/ListarCursos.xhtml
+++ b/ProyectoTISJ-war/web/Curso/ListarCursos.xhtml
@@ -33,7 +33,7 @@
                         </div>
                     </h:panelGroup>
                     <div title="Registrar Inasistencia" class="optionItem" style="background-image: url(../Resources/Images/ListUsrblack.png)"></div>
-                    <a href="../Usuario/SeleccionarUsuarios.xhtml?rol=Estudiante&amp;opt=#{curso.id}" class="SubmenuLink">
+                    <a href="../Usuario/SeleccionarUsuarios.xhtml?rol=Estudiante&amp;opt=addestcurso&amp;idopt=#{curso.id}" class="SubmenuLink">
                     <div title="Agregar Alumnos" class="optionItem" style="background-image: url(../Resources/Images/AddUsrblack.png)"></div>
                     </a>
                     <div title="Registrar Evaluacion" class="optionItem" style="background-image: url(../Resources/Images/EvaluateUsr.png)"></div>
