--- a/ProyectoTISJ-war/web/Usuario/RegistrarUsuario.xhtml
+++ b/ProyectoTISJ-war/web/Usuario/RegistrarUsuario.xhtml
@@ -25,10 +25,14 @@
                 <div class="menuOpcion SinEstilo">   
                     <div class="menuOpcion Mitad" >
                         <div class="nombreDocente">Cuenta</div>
+                        <h:panelGroup id="pInputCedula">
                         <div class="inputContainer">
                             <img class="imagenMenuOpcion" src="../Resources/Images/cedula.png"/>
-                            <h:inputText id="inputCedula" value="#{registrarUsuarioBean.cedulaUsuario}" required="true" requiredMessage="Debes ingresar una cedula." class="Texto" p:placeholder="Cedula"/>                                 
+                            <h:inputText id="inputCedula" value="#{registrarUsuarioBean.cedulaUsuario}" required="true" requiredMessage="Debes ingresar una cedula." class="Texto" p:placeholder="Cedula">
+                                <f:ajax render="pInputCedula" event="change" execute="pInputCedula" listener="#{registrarUsuarioBean.comprobarCedula(registrarUsuarioBean.cedulaUsuario)}" />
+                            </h:inputText>
                         </div><h:message class="error" for="inputCedula"/>
+                        </h:panelGroup>
                         <div class="inputContainer">
                             <img class="imagenMenuOpcion" src="../Resources/Images/nombre.png"/>
                             <h:inputText id="inputNombre" value="#{registrarUsuarioBean.nombreUsuario}" required="true" requiredMessage="Debes ingresar nombre." class="Texto" p:placeholder="Nombre"/>             
@@ -104,7 +108,7 @@
                         <h:inputText id="inputLugarNacimiento" value="#{registrarUsuarioBean.lugarNacimientoUsuario}" required="true" requiredMessage="Debes ingresar un lugar de nacimiento." class="Texto" p:placeholder="Lugar de Nacimiento"/>             
                     </div><h:message class="error" for="inputLugarNacimiento"/>                    
                 </div>
-                <h:panelGroup rendered="#{registrarUsuarioBean.rol == 'Estudiante'}">
+                <h:panelGroup id="datosEstudiante" rendered="#{registrarUsuarioBean.rol == 'Estudiante'}">
                     <div class="menuOpcion SinEstilo" style="display: block;"> 
                         <div class="menuOpcion Mitad" style="display: block;">                    
                             <div class="nombreDocente">Estudios</div>
@@ -140,7 +144,9 @@
                     </div>
                 </h:panelGroup>
                 <div class="menuOpcion" >
-                    <h:commandButton class="boton siguiente" value="Registrar" action="#{registrarUsuarioBean.registrarUsuarioInterfaz()}" disabled="false"/>
+                    <h:commandButton class="boton siguiente" value="Registrar" action="#{registrarUsuarioBean.registrarUsuarioInterfaz()}" disabled="false">
+                        <f:ajax event="click" render="datosEstudiante" listener="#{registrarUsuarioBean.comprobarFormularioInscripcion()}"/>
+                    </h:commandButton>
                     <h:commandButton class="boton" value="Reset" type="reset"/>
                 </div>                    
             </h:form>
