Se desarrollo caso de uso listar clases. Se agregaron metodos a las clases Curso y Clase para listar asistencias, inasistencias y total de clases dictadas. Se especifica tipo de fectch para estudiantes de clase (EAGER).

--- a/ProyectoTISJ-war/web/Curso/ListarCursos.xhtml
+++ b/ProyectoTISJ-war/web/Curso/ListarCursos.xhtml
@@ -17,6 +17,7 @@
                 </div>
             </h:panelGroup>
             <c:forEach var="curso" items="#{listarCursosBean.cursos}">
+                <a href="ListarClases.xhtml?opt=#{curso.id}" >
                 <div class="ListItemContainer" >
                     <div class="item">
                         #{curso.anioCurso}
@@ -43,6 +44,7 @@
                     
                     <div title="Registrar Evaluacion" class="optionItem" style="background-image: url(../Resources/Images/EvaluateUsr.png)"></div>
                 </div>
+                </a>
             </c:forEach>
         </div>
     </ui:define>
