--- a/ProyectoTISJ-war/web/Usuario/RegistrarUsuario.xhtml
+++ b/ProyectoTISJ-war/web/Usuario/RegistrarUsuario.xhtml
@@ -101,7 +101,7 @@
                     </div><h:message class="error" for="inputEstadoCivil"/>
                     <div class="inputContainer">
                         <img class="imagenMenuOpcion" src="../Resources/Images/FechaNacimiento.png"/>
-                        <h:inputText id="inputFechaNacimiento" value="#{registrarUsuarioBean.strFechaNacimiento}" required="true" requiredMessage="Debes ingresar una fecha de nacimiento." class="Texto" p:placeholder="Fecha de Nacimiento"/>              
+                        <h:inputText id="inputFechaNacimiento" value="#{registrarUsuarioBean.strFechaNacimiento}" required="true" requiredMessage="Debes ingresar una fecha de nacimiento." class="Texto" p:placeholder="Fecha de Nacimiento (dd/mm/aaaa)"/>              
                     </div><h:message class="error" for="inputFechaNacimiento"/>
                     <div class="inputContainer">
                         <img class="imagenMenuOpcion" src="../Resources/Images/LugarNacimiento.png"/>
