--- a/ProyectoTISJ-war/web/Curso/Clase.xhtml
+++ b/ProyectoTISJ-war/web/Curso/Clase.xhtml
@@ -34,7 +34,7 @@
                 <div class="menuOpcion" >
                     <div class="inputContainer">
                         <img class="imagenMenuOpcion" src="../Resources/Images/calendario.png"/>
-                        <h:inputText id="inputFecha" value="#{usuariosClase.strFechaClase}" required="true" class="Texto" p:placeholder="Fecha"/>         
+                        <h:inputText id="inputFecha" value="#{usuariosClase.strFechaClase}" required="true" class="Texto" p:placeholder="Fecha (dd/mm/aaaa)"/>         
                     </div>
                     <div class="inputContainer">
                         <img class="imagenMenuOpcion" src="../Resources/Images/materia.png"/>
