Se quitaron casos de navegacion de login y loginRol.

--- a/ProyectoTISJ-war/web/Usuario/RegistrarUsuario.xhtml
+++ b/ProyectoTISJ-war/web/Usuario/RegistrarUsuario.xhtml
@@ -101,7 +101,7 @@
                     </div><h:message class="error" for="inputEstadoCivil"/>
                     <div class="inputContainer">
                         <img class="imagenMenuOpcion" src="../Resources/Images/FechaNacimiento.png"/>
-                        <h:inputText id="inputFechaNacimiento" value="#{registrarUsuarioBean.fechaNacimientoUsuario}" class="Texto" styleClass="datepicker" required="true" requiredMessage="Debes ingresar una fecha de nacimiento." p:placeholder="Fecha de Nacimiento"/>              
+                        <h:inputText id="inputFechaNacimiento" value="#{registrarUsuarioBean.strFechaNacimiento}" class="Texto" styleClass="datepicker" required="true" requiredMessage="Debes ingresar una fecha de nacimiento." p:placeholder="Fecha de Nacimiento"/>              
                     </div><h:message class="error" for="inputFechaNacimiento"/>                    
                     <div class="inputContainer">
                         <img class="imagenMenuOpcion" src="../Resources/Images/LugarNacimiento.png"/>
