--- a/ProyectoTISJ-war/web/Usuario/RegistrarUsuario.xhtml
+++ b/ProyectoTISJ-war/web/Usuario/RegistrarUsuario.xhtml
@@ -25,14 +25,12 @@
                 <div class="menuOpcion SinEstilo">   
                     <div class="menuOpcion Mitad" >
                         <div class="nombreDocente">Cuenta</div>
-                        <h:panelGroup id="pInputCedula">
                         <div class="inputContainer">
                             <img class="imagenMenuOpcion" src="../Resources/Images/cedula.png"/>
-                            <h:inputText id="inputCedula" value="#{registrarUsuarioBean.cedulaUsuario}" required="true" requiredMessage="Debes ingresar una cedula." class="Texto" p:placeholder="Cedula">
-                                <f:ajax render="pInputCedula" event="change" execute="pInputCedula" listener="#{registrarUsuarioBean.comprobarCedula(registrarUsuarioBean.cedulaUsuario)}" />
+                            <h:inputText id="inputCedula" value="#{var}" required="true" requiredMessage="Debes ingresar una cedula." class="Texto" p:placeholder="Cedula">
+                                <f:ajax render="msjCedula" event="valueChange" listener="#{registrarUsuarioBean.comprobarCedula(var)}" />
                             </h:inputText>
-                        </div><h:message class="error" for="inputCedula"/>
-                        </h:panelGroup>
+                        </div><h:message id="msjCedula" class="error" for="inputCedula"/>
                         <div class="inputContainer">
                             <img class="imagenMenuOpcion" src="../Resources/Images/nombre.png"/>
                             <h:inputText id="inputNombre" value="#{registrarUsuarioBean.nombreUsuario}" required="true" requiredMessage="Debes ingresar nombre." class="Texto" p:placeholder="Nombre"/>             
@@ -49,7 +47,10 @@
                     <div class="menuOpcion Mitad" style="float: right" >
                         <div class="nombreDocente">Imagen</div>
                         <img src="../Resources/Images/imagen.png" width="100" height="100" style="margin-top: 50px;" id="ImagenSubida"/>
-                        <div class="botonImagen"><h:inputFile  value="#{registrarUsuarioBean.partImagenPerfil}" class="boton subirImagen perfil" p:accept="image/*"/></div>
+                        <div class="botonImagen"><h:inputFile  value="#{registrarUsuarioBean.partImagenPerfil}" class="boton subirImagen perfil" p:accept="image/*">
+                                <f:ajax event="change" listener="#{registrarUsuarioBean.setPartImagenPerfil(registrarUsuarioBean.partImagenPerfil)}"/>
+                            </h:inputFile>
+                        </div>
                     </div>
                 </div>
                 <div class="menuOpcion" >
