Se agrego setter/getter para imagen usuario. Se agrego clase de seguridad para encriptar passwords, se modificaron facadeUsuario y ControladorUsuario para utilizarla. Se corrigio nombre de coolumna erroneo en resultado lo que daba un error de clave foranea.

--- a/ProyectoTISJ-war/web/Usuario/RegistrarUsuario.xhtml
+++ b/ProyectoTISJ-war/web/Usuario/RegistrarUsuario.xhtml
@@ -27,8 +27,8 @@
                         <div class="nombreDocente">Cuenta</div>
                         <div class="inputContainer">
                             <img class="imagenMenuOpcion" src="../Resources/Images/cedula.png"/>
-                            <h:inputText id="inputCedula" value="#{var}" required="true" requiredMessage="Debes ingresar una cedula." class="Texto" p:placeholder="Cedula">
-                                <f:ajax render="msjCedula" event="valueChange" listener="#{registrarUsuarioBean.comprobarCedula(var)}" />
+                            <h:inputText id="inputCedula" value="#{registrarUsuarioBean.cedulaUsuario}" required="true" requiredMessage="Debes ingresar una cedula." class="Texto" p:placeholder="Cedula">
+                                <f:ajax listener="#{registrarUsuarioBean.comprobarCedula(registrarUsuarioBean.cedulaUsuario)}"  render="msjCedula"/>
                             </h:inputText>
                         </div><h:message id="msjCedula" class="error" for="inputCedula"/>
                         <div class="inputContainer">
