Se agrego datepicker para fecha de clase.

--- a/ProyectoTISJ-war/web/Curso/Clase.xhtml
+++ b/ProyectoTISJ-war/web/Curso/Clase.xhtml
@@ -38,7 +38,7 @@
                     </div>
                     <div class="inputContainer">
                         <img class="imagenMenuOpcion" src="../Resources/Images/materia.png"/>
-                        <h:inputText id="inputTema" value="#{usuariosClase.temaClase}" required="true" class="Texto" p:placeholder="Tema"/>         
+                        <h:inputText id="inputTema" value="#{usuariosClase.temaClase}" class="Texto" required="true" p:placeholder="Tema"/>         
                     </div>
                 </div>
                 
