Se modifico caso de uso de encuesta.

--- a/ProyectoTISJ-war/web/Curso/RegistrarEvaluacion.xhtml
+++ b/ProyectoTISJ-war/web/Curso/RegistrarEvaluacion.xhtml
@@ -9,14 +9,14 @@
     <ui:define name="page_content">
         <div class="cabecera" >
             <div class="titulo" >
-                Registro de nueva Asignatura
+                Registro de nueva Evaluacion
             </div>
         </div>
         <h:form id="frmIngresoDatos" enctype="multipart/form-data">
             <div id="contenedor">
                 <div class="menuOpcion">
                     
-                    <div class="nombreDocente">Asignatura</div>
+                    <div class="nombreDocente">Evaluacion</div>
                         
                     <div class="inputContainer">
                         <img class="imagenMenuOpcion" src="../Resources/Images/materia.png"/>
