--- a/ProyectoTISJ-war/web/Usuario/RegistrarUsuario.xhtml
+++ b/ProyectoTISJ-war/web/Usuario/RegistrarUsuario.xhtml
@@ -143,8 +143,11 @@
                         </div>
                     </div>
                 </h:panelGroup>
+                <h:outputText id="regExito" value="#{registrarUsuarioBean.correcto}" />
                 <div class="menuOpcion" >
-                    <h:commandButton class="boton siguiente" value="Registrar" action="#{registrarUsuarioBean.registrarUsuarioInterfaz()}" disabled="false"/>
+                    <h:commandButton class="boton siguiente" value="Registrar" disabled="false">
+                        <f:ajax event="click" listener="#{registrarUsuarioBean.registrarUsuarioInterfaz()}" render="regExito" onevent="Redirigir" />
+                    </h:commandButton>
                     <h:commandButton class="boton" value="Reset" type="reset"/>
                 </div>                    
             </h:form>
