--- a/ProyectoTISJ-war/web/Usuario/RegistrarUsuario.xhtml
+++ b/ProyectoTISJ-war/web/Usuario/RegistrarUsuario.xhtml
@@ -146,7 +146,7 @@
                 <h:outputText id="regExito" value="#{registrarUsuarioBean.correcto}" />
                 <div class="menuOpcion" >
                     <h:commandButton class="boton siguiente" value="Registrar" disabled="false">
-                        <f:ajax event="click" listener="#{registrarUsuarioBean.registrarUsuarioInterfaz()}" render="regExito" onevent="Redirigir" />
+                        <f:ajax execute="@all" event="click" listener="#{registrarUsuarioBean.registrarUsuarioInterfaz()}" render="regExito" onevent="Redirigir" />
                     </h:commandButton>
                     <h:commandButton class="boton" value="Reset" type="reset"/>
                 </div>                    
