--- a/ProyectoTISJ-war/web/Usuario/RegistrarUsuario.xhtml
+++ b/ProyectoTISJ-war/web/Usuario/RegistrarUsuario.xhtml
@@ -147,7 +147,7 @@
                 <h:inputText id="regRol" value="#{registrarUsuarioBean.rol}" style="display:none;"/>
                 <div class="menuOpcion" >
                     <h:commandButton class="boton siguiente" value="Registrar" disabled="false">
-                        <f:ajax execute="@form" event="click" listener="#{registrarUsuarioBean.registrarUsuarioInterfaz()}" render="regExito" onevent="Redirigir"/>
+                        <f:ajax execute="@form" event="click" listener="#{registrarUsuarioBean.registrarUsuarioInterfaz()}" render="regExito" onevent="RedirigirUsuarios"/>
                     </h:commandButton>
                     <h:commandButton class="boton" value="Reset" type="reset"/>
                 </div>                    
